--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GlaceYT</title>
+    <title>HitenXD</title>
     <style>
         body {
-            background-image: url('https://cdn.discordapp.com/attachments/1209515713476165702/1209768849927315456/TICKET_BOT.png?ex=65e8200a&is=65d5ab0a&hm=0c44375289d1f031b0cea5d2a2d4189b44c33c496b7d46cb68bb4f98a23763a9&');
+            background-image: url('https://tenor.com/en-GB/view/cristiano-ronaldo-celebrate-oh-yeah-gif-11515686');
             background-size: cover;
             background-repeat: no-repeat;
             margin: 0;
